--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,15 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #ffb80e;
 }
 
 h1 {
-  font-size: 8rem;
+  font-size: 5rem;
   letter-spacing: 0.1rem;
-  font-style: italic;
-  color: #40b48e;
+  color: #982121;
   text-shadow: 0 0.2rem 5rem rgb(119, 115, 115);
   text-transform: uppercase;
-  margin: 4rem 0;
 }
 
 .search-form {
@@ -78,7 +77,7 @@ h1 {
 .search-form input[type="submit"] {
   width: 25%;
   text-transform: uppercase;
-  background-color: #40b48e;
+  background-color: #982121;
   color: #fff;
 }
 
@@ -96,7 +95,7 @@ h1 {
   margin: 3rem;
   display: flex;
   flex-direction: column;
-  background-color: #d3d3d3;
+  background-color: white;
   padding: 2rem;
   position: relative;
   border-radius: 0.5rem;
@@ -124,14 +123,14 @@ h1 {
 
 .recipe a {
   font-size: 1.8rem;
-  color: #40b48e;
+  color: #982121;
 }
 
 .recipe button {
   font-size: 2rem;
   text-transform: uppercase;
   color: #fff;
-  background-color: #40b48e;
+  background-color: #982121;
   border: none;
   border-radius: 0.5rem;
   height: 3rem;
@@ -154,6 +153,20 @@ h1 {
 }
 
 .ingredient-weight {
-  color: #40b48e;
+  color: #982121;
   font-size: 1.3rem;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.underline {
+  width: 7rem;
+  height: 0.25rem;
+  background:  #982121;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2rem;
 }
